Bug 295512 - creating a new template is broken
Summary: creating a new template is broken
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-08 09:25 UTC by Halla Rempt
Modified: 2012-03-13 21:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2012-03-08 09:25:33 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64; rv:9.0.1) Gecko/20100101 Firefox/9.0.1
Build Identifier: 

On Linux, creating a new template causes an assert, on Windows it doesn't do anything. The template dialog is also not correctly initialized with the existing groups/templates.

Thread 1 (Thread 0x7faaa9c3f760 (LWP 32209)):
[KCrash Handler]
#6  0x00007faaa32ddd95 in raise () from /lib64/libc.so.6
#7  0x00007faaa32df2ab in abort () from /lib64/libc.so.6
#8  0x00007faaa42b59f4 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/libQtCore.so.4
#9  0x00007faaa42b5baf in ?? () from /usr/lib64/libQtCore.so.4
#10 0x00007faaa42b5d54 in qFatal(char const*, ...) () from /usr/lib64/libQtCore.so.4
#11 0x00007faaa4839689 in KStandardDirs::saveLocation(char const*, QString const&, bool) const () from /usr/lib64/libkdecore.so.5
#12 0x00007faaa95d98f2 in KoTemplateCreateDia::slotAddGroup (this=0x103b4a0) at /home/boud/kde/src/calligra/libs/main/KoTemplateCreateDia.cpp:429
#13 0x00007faaa95da1f4 in KoTemplateCreateDia::qt_metacall (this=0x103b4a0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb53689e0) at /home/boud/kde/build/calligra/libs/main/KoTemplateCreateDia.moc:88
#14 0x00007faaa43b85aa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#15 0x00007faaa5647dd2 in QAbstractButton::clicked(bool) () from /usr/lib64/libQtGui.so.4
#16 0x00007faaa538f5ae in ?? () from /usr/lib64/libQtGui.so.4
#17 0x00007faaa53908eb in ?? () from /usr/lib64/libQtGui.so.4
#18 0x00007faaa5390b5c in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#19 0x00007faaa502d306 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#20 0x00007faaa4fdcc34 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4


Reproducible: Always
Comment 1 Halla Rempt 2012-03-08 15:56:15 UTC
Git commit fb0f7053add926c4230c3bdbaca16871ccaf8bc3 by Boudewijn Rempt.
Committed on 08/03/2012 at 11:46.
Pushed by rempt into branch 'master'.

Fix saving templates in Tables

Both on Windows and on Linux.

M  +11   -8    tables/part/View.cpp

http://commits.kde.org/calligra/fb0f7053add926c4230c3bdbaca16871ccaf8bc3
Comment 2 Halla Rempt 2012-03-09 13:04:25 UTC
Git commit 9cb152c111a252231ddde5c25f4875beb1405719 by Boudewijn Rempt.
Committed on 08/03/2012 at 11:46.
Pushed by rempt into branch '2.4'.

Fix saving templates in Tables

Both on Windows and on Linux.

M  +11   -8    tables/part/View.cpp

http://commits.kde.org/calligra/9cb152c111a252231ddde5c25f4875beb1405719
Comment 3 Halla Rempt 2012-03-13 21:58:19 UTC
Git commit fdcfd0840914a60e1b2969c0c5626b76b926cc28 by Boudewijn Rempt.
Committed on 08/03/2012 at 11:46.
Pushed by rempt into branch 'calligra/2.4'.

Fix saving templates in Tables

Both on Windows and on Linux.

M  +7    -4    sheets/part/View.cpp

http://commits.kde.org/calligra/fdcfd0840914a60e1b2969c0c5626b76b926cc28