Fix saving templates in Tables

Both on Windows and on Linux.

BUG:295512